--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Tunes · Illumina 1 (Public)</title>
 <meta name="theme-color" content="#0B0F19">
-<meta name="description" content="Illumina 1 playlist with an embedded player. YouTube is canonical; Apple Music and Spotify shown when available. Includes moon phases, figure, seed rituals, Jar day links, and auto-next playback.">
+<meta name="description" content="Illumina 1 playlist with an embedded player. YouTube is canonical; Apple Music and Spotify shown when available.">
 <style>
   :root{
     --bg:#0B0F19;--ink:#E5E7EB;--muted:#9CA3AF;--line:rgba(229,231,235,.15);
@@ -14,9 +14,11 @@
   }
   *{box-sizing:border-box}
   html,body{height:100%}
-  body{margin:0;background:var(--bg);color:var(--ink);font:15px/1.55 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-        /* reserve space for the fixed header (updates on resize via JS too) */
-        padding-top: 260px;}
+  body{
+    margin:0;background:var(--bg);color:var(--ink);
+    font:15px/1.55 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+    padding-top:260px;
+  }
   a{color:var(--gold);text-decoration:none}
   a:hover{text-decoration:underline}
   .wrap{max-width:var(--maxw);margin:0 auto;padding:clamp(14px,3.5vw,28px)}
@@ -46,18 +48,21 @@
   .ok{color:var(--ok)} .warn{color:var(--warn)} .err{color:var(--err)}
   footer{margin:24px 0 8px;color:var(--muted);font-size:13px;text-align:center}
   .lane{border:1px dashed var(--line);border-radius:999px;padding:6px 10px;color:#cfd3db}
-  .share{margin-left:auto}
-
   /* Fixed player header */
   .playerbar{position:fixed;left:0;right:0;top:0;z-index:9999;background:rgba(11,15,25,.96);backdrop-filter:saturate(120%) blur(10px);border-bottom:1px solid var(--line)}
   .playerwrap{max-width:var(--maxw);margin:0 auto;padding:8px 0 8px}
   .player-row{display:grid;gap:10px;grid-template-columns:1fr;align-items:center;padding:0 clamp(14px,3.5vw,28px)}
-  @media (min-width:860px){.player-row{grid-template-columns:360px 1fr 170px}}
+  @media (min-width:860px){.player-row{grid-template-columns:360px 1fr 200px}}
   .now{font-size:13px;color:var(--muted)}
   .now strong{color:#e9ecf3}
   .frame{position:relative;aspect-ratio:16/9;border:1px solid var(--line);border-radius:12px;overflow:hidden;background:rgba(255,255,255,.03)}
   .frame #yt{position:absolute;inset:0}
-  .controls{display:flex;gap:8px;justify-content:flex-end;align-items:center}
+  .controls{display:flex;gap:10px;justify-content:flex-end;align-items:center}
+  /* Matched nav buttons (aligned arrows, high contrast) */
+  .navbtn{display:inline-flex;align-items:center;gap:8px;line-height:1;border:1px solid var(--line);border-radius:999px;padding:8px 12px;background:rgba(255,255,255,.02);color:var(--ink)}
+  .navbtn.primary{border-color:var(--amber);background:linear-gradient(180deg,rgba(245,209,66,.15),rgba(245,158,11,.12))}
+  .navbtn .icon{display:inline-flex;width:16px;height:16px}
+  .navbtn .icon svg{display:block;width:16px;height:16px;fill:none;stroke:currentColor;stroke-width:2;stroke-linecap:round;stroke-linejoin:round}
 </style>
 </head>
 <body>
@@ -72,8 +77,18 @@
       </div>
       <div class="frame"><div id="yt"></div></div>
       <div class="controls">
-        <button class="btn" id="prevBtn" type="button">⟨ Prev</button>
-        <button class="btn" id="nextBtn" type="button">Next ⟩</button>
+        <button class="navbtn" id="prevBtn" type="button" aria-label="Previous">
+          <span class="icon" aria-hidden="true">
+            <svg viewBox="0 0 20 20"><path d="M12.5 3.5L6 10l6.5 6.5"/></svg>
+          </span>
+          <span class="label">Prev</span>
+        </button>
+        <button class="navbtn primary" id="nextBtn" type="button" aria-label="Next">
+          <span class="label">Next</span>
+          <span class="icon" aria-hidden="true">
+            <svg viewBox="0 0 20 20"><path d="M7.5 3.5L14 10l-6.5 6.5"/></svg>
+          </span>
+        </button>
       </div>
     </div>
   </div>
@@ -84,6 +99,7 @@
     <h1>Illumina 1 — Public Tunes</h1>
     <div class="bar">
       <span id="cycle" class="pill">Loading…</span>
+      <a class="btn" href="/tunes/beacon/index.html">Beacon</a>
       <label class="pill" for="lane">Lane</label>
       <select id="lane" aria-label="Choose playlist lane">
         <option value="Explainer">Explainer</option>
@@ -93,9 +109,6 @@
       <label class="pill" for="search">Search</label>
       <input id="search" type="text" placeholder="Title, artist, figure, seed…">
       <select id="dayJump" aria-label="Jump to day"><option value="">Jump to day…</option></select>
-      <button id="toggleMissing" class="btn" type="button">Show only missing YouTube</button>
-      <button id="reload" class="btn" type="button">Reload</button>
-      <span id="stat" class="pill">—</span>
     </div>
     <p class="muted">YouTube plays inline. Apple Music / Spotify shown when available.</p>
   </header>
@@ -104,13 +117,12 @@
 
   <footer>
     <p>PLNT Earth · Illumina — Tunes</p>
-    <p class="muted">Source JSON: <span class="mono" id="srcLabel">/Illumina1_Playlist_MASTER_3in1.json</span> · Lane: <span id="laneLabel" class="lane">Explainer</span></p>
   </footer>
 </div>
 
 <!-- Safe YouTube Iframe API loader -->
 <script>
-  (function loadYT(){
+  (function(){
     if (window.YT && YT.Player) return;
     var s = document.createElement('script');
     s.src = "https://www.youtube.com/iframe_api";
@@ -121,40 +133,28 @@
 
 <script>
 (function(){
-  /* === Config === */
   var JAR_DAY_BASE = 'https://jar.plnt.earth/day/?date=';
 
-  /* === State === */
   var q = new URLSearchParams(location.search);
   var src = q.get('src') || '/Illumina1_Playlist_MASTER_3in1.json';
-  var data = null, filtered = false, term = '';
+  var data = null, term = '';
   var curLane = q.get('lane') || 'Explainer';
   var startDay = parseInt(q.get('day')||'',10);
-  var playOrder = [];    // array of Day numbers in order (filtered to playable)
-  var currentIndex = -1; // index within playOrder
+  var playOrder = [];
+  var currentIndex = -1;
   var player, playerReady = false, queuedId = null;
 
-  /* === Elements === */
   var elCards = document.getElementById('cards');
   var elCycle = document.getElementById('cycle');
-  var elStat = document.getElementById('stat');
   var elSearch = document.getElementById('search');
-  var elMissing = document.getElementById('toggleMissing');
-  var elReload = document.getElementById('reload');
   var elDayJump = document.getElementById('dayJump');
   var elLaneSel = document.getElementById('lane');
-  var elLaneLabel = document.getElementById('laneLabel');
-  var elSrcLabel = document.getElementById('srcLabel');
+  var elLaneLabel = null; // removed from UI
   var elNowTitle = document.getElementById('nowTitle');
   var elNowMeta = document.getElementById('nowMeta');
   var prevBtn = document.getElementById('prevBtn');
   var nextBtn = document.getElementById('nextBtn');
 
-  elSrcLabel.textContent = src;
-  elLaneSel.value = curLane;
-  elLaneLabel.textContent = curLane;
-
-  // Adjust body padding to fixed header height (for iOS)
   function syncHeaderHeight(){
     var bar = document.querySelector('.playerbar');
     if(!bar) return;
@@ -165,10 +165,8 @@
   window.addEventListener('orientationchange', syncHeaderHeight, {passive:true});
   setTimeout(syncHeaderHeight, 50);
 
-  function setStat(t){ elStat.textContent = t; }
   function safe(v){ return v==null ? "" : String(v); }
 
-  // Fix common UTF-8 mojibake for display only
   function fixMojibake(s){
     if(!s) return s;
     var map = {
@@ -230,13 +228,6 @@
     );
   }
 
-  function shareUrl(day){
-    var u = new URL(location.href);
-    u.searchParams.set('lane', curLane);
-    u.searchParams.set('day', day);
-    return u.toString();
-  }
-
   function buildOrder(){
     playOrder = [];
     if(!data || !data.PerDay) return;
@@ -246,7 +237,6 @@
       var pf = laneRow.Platforms || {};
       var yt = safe(pf.YouTube && pf.YouTube.url);
       if(!yt) continue;
-      if(filtered && yt) continue; // when showing only missing, don't queue
       if(matchRow(laneRow, base.Figure, base.SeedRitual)){
         playOrder.push(base.Day);
       }
@@ -273,10 +263,9 @@
     if (player && playerReady){
       player.loadVideoById(id);
     } else {
-      queuedId = id; // wait for API ready
+      queuedId = id;
     }
 
-    // bring card into view
     var el = document.getElementById('day-'+day);
     if(el){ el.scrollIntoView({behavior:'smooth', block:'start'}); }
   }
@@ -294,12 +283,9 @@
     playByDay(playOrder[currentIndex]);
   }
 
-  // Public render
   function render(){
     if(!data || !data.PerDay){ elCards.innerHTML=''; elCycle.textContent='No data'; return; }
     var list = data.PerDay.slice();
-    var total = list.length;
-    var missing = 0, warn = 0, ok = 0;
     var rows = [];
 
     for(var i=0;i<list.length;i++){
@@ -315,8 +301,6 @@
       var pf = laneRow.Platforms || {};
       var yt = safe(pf.YouTube && pf.YouTube.url);
       var ytOk = validYT(yt);
-      if(filtered && yt) continue;
-      if(!yt) missing++; else if(ytOk) ok++; else warn++;
 
       var jarHref = JAR_DAY_BASE + encodeURIComponent(date || '');
 
@@ -350,12 +334,10 @@
     elCards.innerHTML = rows.join('');
     var start = data.Cycle && data.Cycle.Start ? data.Cycle.Start : '—';
     var end = data.Cycle && data.Cycle.End ? data.Cycle.End : '—';
-    elCycle.textContent = 'Cycle: '+start+' → '+end+' · Days: '+total;
-    setStat('OK: '+ok+' · Missing: '+missing+' · Check: '+warn);
+    elCycle.textContent = 'Cycle: '+start+' → '+end+' · Days: '+(data.PerDay?data.PerDay.length:'—');
 
     buildOrder();
 
-    // wire buttons
     elCards.querySelectorAll('button[data-play]').forEach(function(b){
       b.addEventListener('click', function(){
         var d = +this.getAttribute('data-play');
@@ -374,7 +356,6 @@
       });
     });
 
-    // auto-start if deep-linked
     if(startDay && document.getElementById('day-'+startDay)){
       playByDay(startDay);
       startDay = null;
@@ -398,7 +379,6 @@
   }
 
   function load(){
-    setStat('Loading…');
     fetch(src, {cache:'no-store'}).then(function(r){
       if(!r.ok) throw new Error('Load failed');
       return r.json();
@@ -406,28 +386,19 @@
       data = json;
       buildDayJump();
       render();
-      setStat('Loaded');
     }).catch(function(){
-      setStat('Could not load JSON');
       elCards.innerHTML = '';
       elCycle.textContent = 'Load error';
     });
   }
 
-  // UI bindings
+  elLaneSel.value = curLane;
   elSearch.addEventListener('input', function(){ term = this.value.trim(); render(); });
-  elMissing.addEventListener('click', function(){
-    filtered = !filtered;
-    this.textContent = filtered ? 'Show all' : 'Show only missing YouTube';
-    render();
-  });
-  elReload.addEventListener('click', load);
   elDayJump.addEventListener('change', function(){ if(this.value) jumpTo(this.value); });
-  elLaneSel.addEventListener('change', function(){ curLane = this.value; elLaneLabel.textContent = curLane; render(); });
+  elLaneSel.addEventListener('change', function(){ curLane = this.value; render(); });
   prevBtn.addEventListener('click', playPrev);
   nextBtn.addEventListener('click', playNext);
 
-  // YouTube API hookup (global callback)
   window.onYouTubeIframeAPIReady = function(){
     player = new YT.Player('yt', {
       width: '100%', height: '100%',
@@ -443,6 +414,11 @@
       }
     });
   };
+
+  setTimeout(function(){
+    var bar = document.querySelector('.playerbar');
+    if(bar){ document.body.style.paddingTop = Math.ceil(bar.getBoundingClientRect().height+8) + 'px'; }
+  }, 50);
 
   load();
 })();
